[project]
name = "dqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Haislich", email = "josedlv936@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.10.1",
    "gymnasium>=1.0.0",
    "matplotlib>=3.10.0",
    "pygame>=2.6.1",
]

[project.scripts]
dqn = "dqn.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
]
